edits and adding into the first section on GDPs

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -107,11 +107,12 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
-## Research Questions - Feb 2024
+## Research Questions - March 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
-2. How can learners build agency in an evolving community of game makers?
-3. How can game design patterns support the development of coding practices with novices?
+2. How can game design patterns support the development of coding practices with novices?
+3. How can learners build agency in an evolving community of game makers?
+
 
 ## Notes to restructure
 
@@ -124,11 +125,9 @@ Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion.
 
 
-
-
 ## Chapter outline
 
-In the last chapter I outlined use of tools often focusing on and emerging tensions in activity on a micro level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
+In the last chapter I outlined use of tools focusing on emerging tensions in activity on a micro-level. This chapter analyses this emergent activity at a mid-level scope between concrete tool use and the wider cultural context of the game making community. I focus on the implementation of individual game design patterns (GDPs) and in doing so addresses how data gathered informs thinking on the research question - _how can game design patterns support the development of coding practices by novices_?
 This chapter begins with re-examining of game design patterns and game play design patterns in the context of a community of novice coders. Following this a vignette of parent child interaction in game making process introduces an overview of interactions of that pair to help contextualise findings. The chapter then undertakes a systematic analysis of the use of game design patterns by participants drawing on detailed observations of practice. A discussion section explores implications and observations from these findings in relation to existing research and concepts. As part if this discussion, I draw on the examples of use of game design patterns in practice to explore the analysis of GDPs as a mid-level construct, of use both to designers and as a pedagogical tool for those seeking to help novice coders become inculcated into a coding community.
 
 <!-- This chapter builds towards a Matrix that could be included in a concluding chapter.
@@ -357,20 +356,16 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 ### Descriptive Commentary on Vignette A
 
-PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY?
+<!-- PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY? -->
 
 **Personal**
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity.
-
-The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
 
 
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
 
-**Guided participation:** The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game.
-
-The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+**Guided participation:** The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
 
 While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways. The process of how participants divide the labour of creating a game between them is explored in relation to other participants later in this chapter.
 
@@ -382,11 +377,7 @@ https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-ke
 
 
 
-**Cultural**
-
-The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse.
-
-The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+**Cultural:** The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
@@ -429,7 +420,7 @@ In ask/imagine stages parent and child are able  discuss storytelling, graphical
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
 
-The following sections focus in on the way design patterns used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis for this chapter [@rogoff_observing_1995]. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to,in turn, personal knowledge, interpersonal activity and finally cultural activities. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
+The following sections focus in on the way design patterns used by parents, children and facilitators in this emerging game making community. To present findings from video data, I draw on the Rogoff's three planes of analysis for this chapter [@rogoff_observing_1995]. Acknowledging that these observation do not fall nearly into each of the three planes, I cover observation on the use of GDPs relating to, in turn, personal knowledge, interpersonal activity and finally cultural activities. The sections are also influenced by activity system elements, in particular the use of tools and the emerging community norms and concepts.
 <!-- Design stages (as explored in chapter two) are also used to guide categorisation , although the discussion of this chapter points to a more complex pattern of design that those outlined in many design cycles. -->
 
 <!-- ### Using cultural, interpersonal & Personal Planes Analysis of use of GDPs
@@ -502,11 +493,11 @@ _Sequencing / algorithms_ are frequently explored in the resolution of errors wi
 <!-- My intuitive reluctance to impose shifts in the scope of activity systems, can be interpreted through the lens of TADS. For me to prompt a shift to a  activities to reinforce recognitions and connection of learner generated code to computing and systems concepts, would impose a objective (first stimulus) and expose a new set of secondary stimuli for learners to draw on.
 THIS SECTION NEEDS DEVELOPMENT AND COMPLEXIFICATION IN RELATION TO EXISTING RESEARCH. -->
 
+## GDPs used in the process of guided participation
 
+This section explores data on the use of GDP from the perspective of interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. From observations of video data, I observe how GDPs are used as a meditational strategy by diverse participants.
 
-## Guided Participation
-
-A transition note here. this section explores data on the use of GDP from the perspective of  interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs.
+<!-- In particular how , ideation, division of labour and prioritisation, and the adoption of technical processes intersect with the use of GDPs. -->
 
 <!--
 NOTE THIS HAS BEEN REMOVED
@@ -519,12 +510,29 @@ This section examines the use of GDPs to facilitate guided participation via int
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 
-<!-- **The process of choice, use of documentation to support implementation and testing pivots on the design pattern and its behaviour.** -->
+**The use of a catalogue of design patterns increases participants choice. Supporting documentation underlies the technical implementation of code for the community. However, not all participants work from instructions**
+
+- RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
+- ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D)
 
 The process of choice, use of documentation to support implementation was driven by my design decision to base supporting resources around GDPs. The vignette in chapter four outlined the process of Toby finding a GDP to implement and adding it to his game, and the example of this chapter shows the parent following the child's desire to implement a GDP shared in a mapping session.  At this phase of research documentation included; comment help within the game template; a step-by-step tutorial which build up the code of the starting template and explore the computing concepts, a menu of self-contained code examples of game elements game elements or game design patterns (GDPs); supporting tutorials briefly explaining how to add the new code needed to implement the patterns. The tutorials to implement GDPs were available online and also as printed A4 hand outs which were provided on request of the older participants.
 
+The previous chapter highlighted a tension between gulfs of technical understanding and my awareness of the perils of instruction-based approaches which privilege more abstract computing and coding concepts. The validity of tension is supported by research which encourages varied approaches beyond instruction-based approaches.
+MOVE FOLLOWING TO LIT REVIEW IF THIS POINT IS REALLY NEEDED HERE.
+[@dietz_design_2021; @resnick_coding_2020]. [SEE LIT REVIEW ON NON-TUTORIAL PEDAGOGIES]. Written instructions provide barriers of literacy and change of habit explored in previous studies [@blunden2014seeking]
 
-Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages. Thus not all participants engaged with written tutorials.Therefore, while the pattern collection and the associated resources was my main guidance for this group process, it was not used by all participants.  This observation is supported by research which encourages varied approaches beyond instruction-based approaches. [@dietz_design_2021; @resnick_coding_2020]. [SEE LIT REVIEW ON NON-TUTORIAL PEDAGOGIES]. Written instructions provide barriers of literacy and change of habit explored in previous studies [@blunden2014seeking] which explore linking to written instructions within the draMark  frame provides greater incentive to engage in this way.
+Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages. Thus not all participants engaged with written tutorials. Therefore, while the pattern collection and the associated resources was my main guidance for this group process, it was not used by all participants.
+
+Later sections explore in more detail alternative strategies used to implement GDPs including:
+
+- linking to written instructions within the drama frame (provides greater incentive to engage in this way)
+- direct support from a family member
+- informal peer learning from wider community members
+
+While chapter 2 described research highlighting on the value of unstructured approaches to learning technology [ITO etc], the experience of P1 of the design showed the necessity for some scaffolding to support participants both technically and organisationally.
+
+The menu of GDPs fulfilled this need.
+
 
 <!-- In addition, Direct help between peer participants, as outlined other section, was a key process of the game making community from early stages.
 However, to overcome scarcity of facilitator support, direct help processes were seeded by other forms of support resources and written documentation. -->
