--- a/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-5-Gdps.md_toc.md
@@ -1,6 +1,7 @@
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
-    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
+    -   [Research Questions - March
+        2024](#research-questions---march-2024)
     -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
     -   [On GDP as a germ-cell and unit of analysis - and chapter
@@ -13,7 +14,8 @@
     -   [The role of GDPs in the personal appropriation of
         computational, design and systems
         concepts](#the-role-of-gdps-in-the-personal-appropriation-of-computational-design-and-systems-concepts)
-    -   [Guided Participation](#guided-participation)
+    -   [GDPs used in the process of guided
+        participation](#gdps-used-in-the-process-of-guided-participation)
         -   [GDPs offer the potential to assist project navigation,
             acting as a framework for code examples and step-by-step
             tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
