--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -1,53 +1,60 @@
 -   [Exploration of the Formative Learning Design
-    Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
-    -   [A note on style](#a-note-on-style)
-    -   [Chapter Introduction](#chapter-introduction)
+    Process](#exploration-of-the-formative-learning-design-process){#toc-exploration-of-the-formative-learning-design-process}
+    -   [Research Questions - Feb
+        2024](#research-questions---feb-2024){#toc-research-questions---feb-2024}
+    -   [A note on style](#a-note-on-style){#toc-a-note-on-style}
+    -   [Chapter
+        Introduction](#chapter-introduction){#toc-chapter-introduction}
     -   [Vignette illustrating an example of game making
-        activity](#vignette-illustrating-an-example-of-game-making-activity)
-        -   [Table of Vignette](#table-of-vignette)
+        activity](#vignette-illustrating-an-example-of-game-making-activity){#toc-vignette-illustrating-an-example-of-game-making-activity}
+        -   [Table of
+            Vignette](#table-of-vignette){#toc-table-of-vignette}
         -   [Description of levels of activity illustrated using the
-            vignette](#description-of-levels-of-activity-illustrated-using-the-vignette)
+            vignette](#description-of-levels-of-activity-illustrated-using-the-vignette){#toc-description-of-levels-of-activity-illustrated-using-the-vignette}
             -   [Environmental factors and
-                objectives](#environmental-factors-and-objectives)
+                objectives](#environmental-factors-and-objectives){#toc-environmental-factors-and-objectives}
             -   [Larger objective - Making games for an
-                audience](#larger-objective---making-games-for-an-audience)
+                audience](#larger-objective---making-games-for-an-audience){#toc-larger-objective---making-games-for-an-audience}
             -   [Mid-level objective - Constructing a game feature by
-                feature](#mid-level-objective---constructing-a-game-feature-by-feature)
+                feature](#mid-level-objective---constructing-a-game-feature-by-feature){#toc-mid-level-objective---constructing-a-game-feature-by-feature}
             -   [Smaller objectives and actions - Implementing discrete
                 code and design
-                structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
+                structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures){#toc-smaller-objectives-and-actions---implementing-discrete-code-and-design-structures}
     -   [Conflicts and design tensions experienced by participants and
-        facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
+        facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators){#toc-conflicts-and-design-tensions-experienced-by-participants-and-facilitators}
         -   [Conflicts due to identity clashes and dysfunctional group
-            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
+            work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work){#toc-conflicts-due-to-identity-clashes-and-dysfunctional-group-work}
         -   [Tensions due to lack of access and familiarity to game
             programming
-            tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+            tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools){#toc-tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools}
         -   [Design adaptations to facilitate novice use of a code
-            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
+            playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground){#toc-design-adaptations-to-facilitate-novice-use-of-a-code-playground}
             -   [Addressing code syntax
-                errors](#addressing-code-syntax-errors)
+                errors](#addressing-code-syntax-errors){#toc-addressing-code-syntax-errors}
             -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+                creation](#distributed-vs.-self-contained-approaches-to-asset-creation){#toc-distributed-vs.-self-contained-approaches-to-asset-creation}
             -   [Remixing and showcasing
-                projects](#remixing-and-showcasing-projects)
+                projects](#remixing-and-showcasing-projects){#toc-remixing-and-showcasing-projects}
             -   [Design choices of the starter game
-                template](#design-choices-of-the-starter-game-template)
+                template](#design-choices-of-the-starter-game-template){#toc-design-choices-of-the-starter-game-template}
             -   [Observations on the game template and core
-                tools](#observations-on-the-game-template-and-core-tools)
+                tools](#observations-on-the-game-template-and-core-tools){#toc-observations-on-the-game-template-and-core-tools}
         -   [Participant conflict associated with project navigation and
             use of
-            documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-            -   [Quick Start Cards](#quick-start-cards)
-            -   [Code snippet examples](#code-snippet-examples)
+            documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation){#toc-participant-conflict-associated-with-project-navigation-and-use-of-documentation}
+            -   [Quick Start
+                Cards](#quick-start-cards){#toc-quick-start-cards}
+            -   [Code snippet
+                examples](#code-snippet-examples){#toc-code-snippet-examples}
             -   [Structuring instructional tutorial
-                chapters](#structuring-instructional-tutorial-chapters)
+                chapters](#structuring-instructional-tutorial-chapters){#toc-structuring-instructional-tutorial-chapters}
             -   [Theming the a collection of game design patterns to aid
-                navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
-    -   [Chapter Discussion](#chapter-discussion)
+                navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation){#toc-theming-the-a-collection-of-game-design-patterns-to-aid-navigation}
+    -   [Chapter
+        Discussion](#chapter-discussion){#toc-chapter-discussion}
         -   [Discussion on authenticity and agency concerning tools and
-            resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources)
+            resources](#discussion-on-authenticity-and-agency-concerning-tools-and-resources){#toc-discussion-on-authenticity-and-agency-concerning-tools-and-resources}
         -   [Summary of barriers and tensions explored in this
-            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
-        -   [Link to next chapter](#link-to-next-chapter)
+            chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter){#toc-summary-of-barriers-and-tensions-explored-in-this-chapter}
+        -   [Link to next
+            chapter](#link-to-next-chapter){#toc-link-to-next-chapter}
