--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -140,21 +140,27 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-## On GDP as a germ-cell and unit of analysis - and chapter outline
+## On GDP as a germ-cell and unit of analysis recap of design patterns
+
+<!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
+
+This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
+
+### Recap on design patterns and game design patterns
+
+In chapter two the use of design patterns in an education context were summarised. Design patterns provide a relatable contextual basis for learning complex code structures. More specifically, game design patterns they have been used in educational settings. In the work of Repenning and colleagues [@repenning_scalable_2015; @basawapatna_using_2010] GDPs are framed as science simulation concepts that aid transfer of concepts to similar setting. Eriksson and colleagues [-@eriksson_using_2019] draw on catalogue of GDPs can provide a useful basis for co-design work to help deepen the knowledge of participants and provide a shared language to help collaborative design.
 
 
-In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
+  <!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
+  <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
 
-**Recap on design patterns**
-Before engaging in OBSERVATIONs, to deepening our understanding of use of design patterns in an education context
-
-  -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
-  - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
-  - previous uses of GDPs - by repenning and others to then relate them to this framing.
 
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
-**On the utility of identifying a germ cell/ unit of analysis**
+### On the utility of identifying a germ cell/ unit of analysis
+
+**This chapter develops analysis of the role of GDPs as a guiding process in varied forms in a way that aligns with activity theory concept of unit of analysis/ germ cell.**
+
 These are two similar concepts with slightly different foci.
 
 <!-- Mid-level construct of design / patterns heuristics [] -->
@@ -237,8 +243,6 @@ AT provides a concept of rising to the concrete which invites analysis of how th
 <!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
 
 
-
-
 ## Study of Vignette A
 
 In this section, to give an overview of the specifics of the learning design, and participant interactions I use vignette to give a snapshot of the interactions of one family. This comprises a table of participant dialogue, screenshots and description of their interactions including gestures followed by a summary interpretation of interactions.
@@ -246,7 +250,6 @@ In this section, to give an overview of the specifics of the learning design, an
 <!--
 // On line version is here
 https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit
-
 -->
 
 _Context:_ For the previous five minutes the parent and child dyad have faced a blockage of a glitch in the software which has prevented their wider objective of adding a game design pattern to the first level of their game of adding keys and doors, where players must collect a key and then navigate to a door to progress to the next level. The activity of this pair in this vignette is driven by their following a tutorial chapter in the text book. This chapter is included as appendix 5.x. The parent Suzanna has been making multiple changes to the code while the child Olivia has been expressing boredom. In response, Suzanna has expressed frustration and irritation. This vignetter starts when Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding problem that is blocking their progress.
@@ -358,14 +361,16 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 <!-- PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY? -->
 
-**Personal**
+<!-- **Describing on a level of personal** -->
 
 The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
 
 
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
 
-**Guided participation:** The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+<!-- **Guided participation:**  -->
+
+The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
 
 While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways. The process of how participants divide the labour of creating a game between them is explored in relation to other participants later in this chapter.
 
@@ -377,7 +382,9 @@ https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-ke
 
 
 
-**Cultural:** The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+<!-- **Cultural:**  -->
+
+The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
