reducing vignetted down

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -247,14 +247,19 @@ AT provides a concept of rising to the concrete which invites analysis of how th
 
 In this section, to give an overview of the specifics of the learning design, and participant interactions I use vignette to give a snapshot of the interactions of one family. This comprises a table of participant dialogue, screenshots and description of their interactions including gestures followed by a summary interpretation of interactions.
 
+_Context:_ For the previous ten minutes the parent and child dyad have struggled a tutorial chapter in the text book  included as appendix 5.x. on adding the pattern of keys and doors ( players must collect a key and then navigate to a door to progress to the next level). The parent Suzanna has been making multiple changes to the code while the child Olivia has been expressing boredom. Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding problem and after help has been given to solve the bug Suzanna cedes the keyboard to Olivia to test the working game.
+
+<!-- INSERT VIGNETTE TABLE HERE
+https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit -->
+
+Insert or shorter Vignette here
+https://docs.google.com/document/d/1zwV_CLBd2tG0taSclGntJGyC8m9ib39ztHlCg132PMs/edit
+
+
 <!--
 // On line version is here
 https://docs.google.com/document/d/1B7kFl5QsGV-oWtFWHLBIJNpa5GeYMlCntq31BnPAQT4/edit
 -->
-
-_Context:_ For the previous five minutes the parent and child dyad have faced a blockage of a glitch in the software which has prevented their wider objective of adding a game design pattern to the first level of their game of adding keys and doors, where players must collect a key and then navigate to a door to progress to the next level. The activity of this pair in this vignette is driven by their following a tutorial chapter in the text book. This chapter is included as appendix 5.x. The parent Suzanna has been making multiple changes to the code while the child Olivia has been expressing boredom. In response, Suzanna has expressed frustration and irritation. This vignetter starts when Suzanna suggests that Olivia asks the facilitator Mick for help to resolve the coding problem that is blocking their progress.
-
-INSERT VIGNETTE TABLE HERE
 
 <!--
 |**Dialogue**|**Activity**|
@@ -370,9 +375,9 @@ The key and door pattern is one of the harder ones to implement as it involves a
 
 <!-- **Guided participation:**  -->
 
-The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child. The parent says "Did you see Olivia?" and then prompts the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions. The parent then circumnavigates the conflict of her own hesitancy regarding asking for facilitator help by sending out her child to ask.
+The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions.
 
-While this pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard , adult facilitating and coding process responsive to the child's leat, other individuals and pairs approached the same objectives in diverse ways. The process of how participants divide the labour of creating a game between them is explored in relation to other participants later in this chapter.
+<!-- This pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard, adult facilitating and coding process responsive to the child's lead, other individuals and pairs approached the same objectives in diverse ways.  -->
 
 <!-- DIVISION ON LABOUR HERE - POSSIBLE DUPLICATE? -->
 
@@ -388,8 +393,8 @@ The child Olivia also wants to add additional levels to their game. In recent se
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
 
-This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns.
-Later in the chapter this will be analysed for implications for researchers and d opportunities for educators.
+<!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
+
 
 <!--
 MOVE TO DOL IF NEEDED
