editing down germ cell

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -169,7 +169,7 @@ These are two similar concepts with slightly different foci.
 
 In this thesis, as a designer / researcher and practitioner both aspects are relevant.
 
-Examining the analytical aspect, the process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. Indeed, while game making can be seen superficially as the primary activity, I argue that a narrower still objective of implementing GDPs and the dependant actions became the most vital unit of activity for participants, and consequently of primary interest for this study. This chapter will explore the implementation of GDPs as small scale projects contributing to the overarching objective to create a game.
+Examining the analytical aspect, the process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs. As explored in chapter three, while this concept of germ cell / unit of analysis is typically used in a larger scope of activity, the principles apply this smaller scope. Following the outlines of chapter two, while game making can as an overarching  activity system, a narrower activity whose objective is implementing GDPs became a significant unit of activity for this study. 
 
 <!-- Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!" -->
 
@@ -391,7 +391,7 @@ https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-ke
 
 The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
 
-There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm at the child’s deletion of all elements of hazard. This interaction shows the parent guiding the child to imagine the user experience [@wright_empathy_2008] through the use of terms from GDPs. The parent uses GDPs as a prompt that they are designing for others. The child has also thought ahead to this time of playtesting. Both child and parent make reference to the imagined player experiences. In the vignette above Suzanna mentions "it's no fun if their are no hazards". The response of Olivia "It is for me." indicates an awareness of the conventions and a desire to play against them. The child articulate her motivation to _surprise_ players.
+There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
 
 <!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
 
@@ -427,7 +427,7 @@ The parent struggles to implement quite ambitious code challenges that she takes
 In ask/imagine stages parent and child are able  discuss storytelling, graphical and other aesthetic choices -->
 
 
-## Observations and analysis of use of Game Design Patterns by participants
+## Observations and analysis of use of Game Design Patterns (GDPs) by participants
 
 <!-- NOTE:  this addresses HOW THESE FINDING ARE STRUCTURED. MOVE TO INTRO? -->
 
