adding focus of mediation strategies and shared objects

--- a/_posts/thesis_chapters/2024-3-5-Gdps.md
+++ b/_posts/thesis_chapters/2024-3-5-Gdps.md
@@ -169,16 +169,17 @@ These are two similar concepts with slightly different foci.
 
 In this thesis, as a designer / researcher and practitioner both aspects are relevant.
 
-Examining the analytical aspect, the process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs. As explored in chapter three, while this concept of germ cell / unit of analysis is typically used in a larger scope of activity, the principles apply this smaller scope. Following the outlines of chapter two, while game making can as an overarching  activity system, a narrower activity whose objective is implementing GDPs became a significant unit of activity for this study. 
+Examining the analytical aspect, the process of seeking and defining a key activity scope/unit for analysis helps define useful boundaries of what to analyse in depth. This chapter has a narrow focus on the implementation of gameplay design patterns (GDPs) allowing for the identification and analysis of patterns of participant behaviour and introduced and emerging community practices to do with GDPs. As explored in chapter three, while this concept of germ cell / unit of analysis is typically used in a larger scope of activity, the principles apply this smaller scope. Following the outlines of chapter two, while game making can as an overarching  activity system, a narrower activity whose objective is implementing GDPs became a significant unit of activity for this study.
 
 <!-- Here the term project here communicates a concrete implementation of a planned goal and also a sense that all elements of key activity are present at this level e.g. all stages of the design cycle (and another example?).  This sentiment is echoed by a parent when noticing that the documentation on one GDPs involved several distinct stages - "It’s like a project in itself really!" -->
 
 <!-- At this scope, for participants implementing . -->
 
-Turning to the developmental aspect, a granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002].
-The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.  This chapter develops analysis of the role of GDPs as a guiding process for supporting resources and support processes in varied forms. These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs.
+Turning to the developmental aspect, a granular exploration of the tensions and processes at work in a complex educational environment can via identifying emerging barriers and responses to comprehension, communication and practical barriers to implementing design challenges facilitates replicability of research and supports its potential value to other practitioners [@barab_using_2002]. The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.  This chapter develops analysis of the role of GDPs as a guiding process for supporting resources and support processes in varied forms. These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means. These include: use as part of meditational strategies by participants and facilitators and as shared objects between participants, facilitators and peers (as explored in chapter three and four).
 
-In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter.
+<!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
+
+
 
 <!-- However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
 
